# GrowthGrid

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: 1bc473259cc0_initial_tables.py  2bc574360dd1_add_user_id_to_tags.py
backend/app/: main.py
backend/app/api/: analytics.py  auth.py  entries.py  uploads.py
backend/app/core/: b2_client.py  cache.py  config.py  limiter.py  logging.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  attachment.py  entry.py  link.py  tag.py  user.py
backend/app/repositories/: analytics_repo.py  attachment_repo.py  entry_repo.py  user_repo.py
backend/app/schemas/: analytics.py  auth.py  entry.py
backend/app/services/: analytics_service.py  auth_service.py  entry_service.py  health_service.py  storage_service.py  upload_service.py
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_entries.py  test_security.py  test_uploads.py
docs/: IMPLEMENTATION.md  PRD.md
frontend/: .gitignore  .prettierignore  package-lock.json  package.json
frontend/src/: middleware.ts  proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/calendar/: page.tsx
frontend/src/app/dashboard/entries/: page.tsx
frontend/src/app/dashboard/entries/[id]/: page.tsx
frontend/src/app/dashboard/entries/new/: page.tsx
frontend/src/app/dashboard/settings/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: heatmap.tsx  keyboard-shortcut-provider.tsx  loader.tsx  mobile-header.tsx  sidebar.tsx
frontend/src/components/entry/: entry-edit-mode.tsx  entry-view-mode.tsx  file-attachments.tsx  link-input.tsx  markdown-editor.tsx  tag-input.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx
frontend/src/lib/: api.ts  auth-context.tsx  nav-config.ts  types.ts  use-debounce.ts  use-platform.ts  use-unsaved-changes.ts  utils.ts
